change in project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class4---food-app",
+  "name": "Akhr-Eats",
   "version": "1.0.0",
   "description": "Akhr eats , A food delivery application",
   "scripts": {
